[gd_scene load_steps=25 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Gotham-Light.otf" type="DynamicFontData" id=2]
[ext_resource path="res://operations.tres" type="ButtonGroup" id=3]
[ext_resource path="res://rsc/audi/SelectPlus.wav" type="AudioStream" id=4]
[ext_resource path="res://fonts/Gotham-Bold.otf" type="DynamicFontData" id=5]
[ext_resource path="res://fonts/GothamBook.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://rsc/audi/SelectMinus.wav" type="AudioStream" id=7]
[ext_resource path="res://rsc/audi/SelectMultiply.wav" type="AudioStream" id=8]
[ext_resource path="res://rsc/audi/SelectDivide.wav" type="AudioStream" id=9]
[ext_resource path="res://fonts/BOX.tres" type="StyleBox" id=10]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="Theme" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="DynamicFont" id=9]
size = 25
extra_spacing_bottom = 200
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 121
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFont" id=12]
size = 700
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=13]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
size = 60
font_data = ExtResource( 6 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Node2D" parent="."]

[node name="TaptoContinue" type="Button" parent="."]
margin_left = -8.0
margin_top = 1076.0
margin_right = 1075.0
margin_bottom = 1928.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Addition" type="Button" parent="."]
margin_left = 102.787
margin_top = 377.545
margin_right = 502.787
margin_bottom = 633.545
theme = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = ExtResource( 10 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
group = ExtResource( 3 )
text = "High Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Addition"]
margin_left = 69.7564
margin_top = 81.8056
margin_right = 320.756
margin_bottom = 215.806
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.129412, 0.129412, 0.129412, 1 )
custom_colors/font_outline_modulate = Color( 0.129412, 0.129412, 0.129412, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.129412, 0.129412, 1 )
text = "1 + 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subtraction" type="Button" parent="."]
margin_left = 118.114
margin_top = 787.931
margin_right = 518.114
margin_bottom = 1043.93
theme = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = ExtResource( 10 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
shortcut_in_tooltip = false
group = ExtResource( 3 )
text = "High Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Subtraction"]
margin_left = 87.1138
margin_top = 81.9092
margin_right = 310.114
margin_bottom = 215.909
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.129412, 0.129412, 0.129412, 1 )
custom_colors/font_outline_modulate = Color( 0.129412, 0.129412, 0.129412, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.129412, 0.129412, 1 )
text = "1 - 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Division" type="Button" parent="."]
margin_left = 596.054
margin_top = 377.545
margin_right = 996.054
margin_bottom = 633.545
theme = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = ExtResource( 10 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
group = ExtResource( 3 )
text = "High Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Division"]
margin_left = 87.3187
margin_top = 79.1359
margin_right = 325.319
margin_bottom = 213.136
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.129412, 0.129412, 0.129412, 1 )
custom_colors/font_outline_modulate = Color( 0.129412, 0.129412, 0.129412, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.129412, 0.129412, 1 )
text = "1 / 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplication" type="Button" parent="."]
margin_left = 596.054
margin_top = 786.064
margin_right = 996.054
margin_bottom = 1042.73
theme = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = ExtResource( 10 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
shortcut_in_tooltip = false
group = ExtResource( 3 )
text = "High Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Multiplication"]
margin_left = 87.3187
margin_top = 84.5742
margin_right = 295.319
margin_bottom = 196.574
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.129412, 0.129412, 0.129412, 1 )
custom_colors/font_outline_modulate = Color( 0.129412, 0.129412, 0.129412, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.129412, 0.129412, 1 )
text = "1 x 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tap here" type="Label" parent="."]
margin_left = 180.192
margin_top = 1407.99
margin_right = 7656.19
margin_bottom = 2030.99
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.223529, 0.223529, 0.223529, 1 )
custom_colors/font_outline_modulate = Color( 0.223529, 0.223529, 0.223529, 1 )
text = "Tap Here to Continue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 17.0
margin_top = 84.0
margin_right = 119.0
margin_bottom = 184.0
custom_fonts/normal_font = SubResource( 13 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
bbcode_enabled = true
tab_size = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coin" type="Label" parent="."]
margin_left = 124.255
margin_top = 101.065
margin_right = 276.255
margin_bottom = 155.065
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0.203922, 0.203922, 0.203922, 1 )
custom_colors/font_outline_modulate = Color( 0.247059, 0.247059, 0.247059, 1 )
text = "6565"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="PlusAud" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="MinusAud" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="DivideAud" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="MultiplyAud" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="pressed" from="TaptoContinue" to="." method="_on_TaptoContinue_pressed"]
[connection signal="pressed" from="Addition" to="." method="_on_Addition_pressed"]
[connection signal="pressed" from="Subtraction" to="." method="_on_Subtraction_pressed"]
[connection signal="pressed" from="Division" to="." method="_on_Division_pressed"]
[connection signal="pressed" from="Multiplication" to="." method="_on_Multiplication_pressed"]
